deleted irrelevant content

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -8,6 +8,8 @@ layout: about
 
 {{ content_split[0] }}
 
+<!--
+
 <section>
 {% if page.selected_projects %}
   <h2 id="selected-projects">{{ strings.welcome.selected_projects | default:"Selected Projects" }}</h2>
@@ -38,14 +40,16 @@ layout: about
   {% endfor %}
   </div>
 {% endif %}
+-->
 
+<!--
 {% if page.more_projects %}
   {% assign more_projects = site.pages | where:"path", page.more_projects | first %}
   {% if more_projects %}
     {% capture projects_title %}<a class="heading flip-title" href="{{ more_projects.url | relative_url }}">{{ more_projects.title }}</a>{% endcapture %}
-    {% assign text = strings.welcome.more_projects | default:"See <!--projects_title--> for more" %}
+    {% assign text = strings.welcome.more_projects | default:"See _ for more" %}
     <p class="read-more mt0">
-      {{ text | replace:"<!--projects_title-->", projects_title }}
+      {{ text | replace:"<___>", projects_title }}
     </p>
   {% else %}
     Page with path <code>{{ page.more_posts }}</code> not found.
@@ -79,9 +83,9 @@ layout: about
   {% assign more_posts = site.pages | where:"path", page.more_posts | first %}
   {% if more_posts %}
     {% capture posts_title %}<a class="heading flip-title" href="{{ more_posts.url | relative_url }}">{{ more_posts.title }}</a>{% endcapture %}
-    {% assign text = strings.welcome.more_posts | default:"See <!--posts_title--> for more" %}
+    {% assign text = strings.welcome.more_posts | default:"See <z> for more" %}
     <p class="read-more">
-      {{ text | replace:"<!--posts_title-->", posts_title }}
+      {{ text | replace:"<z>", posts_title }}
     </p>
   {% else %}
     Page with path <code>{{ page.more_posts }}</code> not found.
@@ -90,3 +94,5 @@ layout: about
 </section>
 
 {{ content_split[1] }}
+
+-->
