--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -51,4 +51,4 @@ layout: base
   {% if forloop.last %}</div>{% endif %}
 {% endfor %}
 
-<p> Be sure to check more of it <a href="/projects">here</a></p>
+<p> Be sure to check more of it <a href="/projects/">here</a></p>
