--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -16,7 +16,7 @@ layout: base
 
   <h1 class="page-title hr">{{ page.title }}</h1>
 
-  {{ author.about | markdownify }}
+  <!-- {{ author.about | markdownify }} -->
 
   {% include message.html text=page.description hide=page.hide_description alt="" %}
 
